# duvc-ctl

./: CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PYPI_README.md  README.md  build_check.py  index.html  pyproject.toml  setup.py
.github/workflows/: build-and-publish.yml  build-wheels.yml  docs.yml  dovc.yml  publish-chocolatey.yml
bindings/python/: LICENSE  PYPI_README.md  pybind_module.cpp  pyproject.toml  repair_wheel.py  requirements-dev.txt  setup.py  test.py
bindings/python/duvc_ctl/: __init__.py  (+2 more)
chocolatey/duvc-cli/: duvc-cli.nuspec
cli/: CMakeLists.txt  main.cpp
cmake/: duvc-config.cmake.in  duvc.pc.in
docs/: build.py  clean.py  index.md
docs/c/: index.md
docs/c++/: index.md
docs/cli/: index.md
docs/doxygen/: Doxyfile  Doxyfile.in  custom.css
docs/python/: index.md
docs/sphinx/: conf.py  index.md  index.rst  requirements.txt
doctrees/: index.doctree
doctrees/examples/: cli-examples.doctree  cpp-examples.doctree  python-examples.doctree
doctrees/user-guide/: installation.doctree  migration.doctree  quickstart.doctree
doxygen/html/: annotated.html  annotated_dup.js  api_8cpp.html  api_8cpp.js  api_8cpp__incl.map  api_8cpp__incl.md5  api_8cpp_a01f1d8b5b3d7e96c9477f4e163fe1a7c_cgraph.map  api_8cpp_a060da1a749db06dc7aefe358bf7b0c4b_cgraph.map  api_8cpp_a1bb7b51ed8284acbb23ca4f7ba351d09_cgraph.md5  api_8cpp_a1c85439662d95e31bfeb85fb98d16a06_cgraph.map  api_8cpp_a1e2fd3b752c6ee2b24afa9ab771aac0c_cgraph.map  api_8cpp_a2443011d38e904503e646d3da95252a2_cgraph.md5  api_8cpp_a25beb5fbe1559b1e26296077bf0990e8_cgraph.map  api_8cpp_a26fe300558fa86a716e7d4c4faf0ad7c_cgraph.map  api_8cpp_a33ba81a83d33ca811b4c3edb2b191bcc_cgraph.md5  api_8cpp_a3787547f23b0553ba7e7256d40cae203_cgraph.map  api_8cpp_a4858259a9c4d23ce0d671b52615c3e74_cgraph.md5  api_8cpp_a4961e02c4ed3ad0dced1ca69ebfabd34_cgraph.map  api_8cpp_a4961e02c4ed3ad0dced1ca69ebfabd34_cgraph.md5  api_8cpp_a4961e02c4ed3ad0dced1ca69ebfabd34_icgraph.map  api_8cpp_a4961e02c4ed3ad0dced1ca69ebfabd34_icgraph.md5  api_8cpp_a563caf7299afef6db2be80775ec7045b_cgraph.map  api_8cpp_a5bc995ad18045408b7f2ba1c3b2033e6_cgraph.map  api_8cpp_a663fa0c39548b58bcdeb34c0dd5210fa_cgraph.map  api_8cpp_a663fa0c39548b58bcdeb34c0dd5210fa_cgraph.md5  api_8cpp_a68675eb2d53f173bd282b1ed4a03bd4c_cgraph.md5  api_8cpp_a69eb1c2eff849b8249b84ed3c7e820a1_cgraph.md5  api_8cpp_a6c818dfe0ce43fce1ac013dcfcc97ab6_cgraph.map  api_8cpp_a772454c70db4cfe25bd897bca791d63a_cgraph.md5  api_8cpp_a78a386b1c92b4eb21ab8c8c486bd1c5a_cgraph.map  api_8cpp_a78a386b1c92b4eb21ab8c8c486bd1c5a_cgraph.md5  api_8cpp_a7a2254e4e7553eb64baba819cf7fde5e_cgraph.md5  api_8cpp_a8eb2a7c27c88acb2ad87386c3d703493_cgraph.md5  api_8cpp_a993684c5701505045bdb13709872300b_cgraph.map  api_8cpp_a993684c5701505045bdb13709872300b_cgraph.md5  api_8cpp_aad9636d2df56d2f955de2783cc06bbd6_cgraph.map  api_8cpp_ab4d738bc8b5e468bfa9ecd3e27395815_cgraph.map  api_8cpp_ab4d738bc8b5e468bfa9ecd3e27395815_cgraph.md5  api_8cpp_ab70bb6f568a46a622e06d8561e51ecb7_icgraph.map  api_8cpp_ab70bb6f568a46a622e06d8561e51ecb7_icgraph.md5  (+854 more)
doxygen/xml/: Doxyfile.xml  api_8cpp.xml  api_8h.xml  bindings_8cpp.xml  camera_8cpp.xml  camera_8h.xml  capability_8cpp.xml  capability_8h.xml  classduvc_1_1Camera.xml  classduvc_1_1DeviceCapabilities.xml  classduvc_1_1DeviceConnection.xml  classduvc_1_1DeviceConnection_1_1com__apartment.xml  classduvc_1_1Error.xml  classduvc_1_1IDeviceConnection.xml  classduvc_1_1IPlatformInterface.xml  classduvc_1_1KsPropertySet.xml  classduvc_1_1Result.xml  classduvc_1_1Result_3_01void_01_4.xml  classduvc_1_1WindowsPlatformInterface.xml  classduvc_1_1com__apartment.xml  classduvc_1_1com__ptr.xml  connection__pool_8cpp.xml  connection__pool_8h.xml  constants_8cpp.xml  constants_8h.xml  core_8cpp.xml  core_8h.xml  defs_8h.xml  device_8cpp.xml  device_8h.xml  device__monitor_8cpp.xml  dir_31163e2612a457f26af176ce7055a969.xml  dir_313caf1132e152dd9b58bea13a4052ca.xml  dir_3b19ecf29356981f494745fbef7e56bf.xml  dir_4b68c2fef3e151b6b93d5e93b14f1857.xml  dir_55fe6003a6c0a8fbb894a07ce9c60c0e.xml  dir_8abc814adb877ee0e3ffcf30bf0fb031.xml  dir_90da97247338d9e3ac7f8bf7df478e67.xml  dir_972f138192ae14f23850fe4a6433774e.xml  dir_aebb8dcc11953d78e620bbef0b9e2183.xml  (+43 more)
examples/: example.py  simple_api.py
include/duvc-ctl/: core.h  defs.h  duvc.hpp
py/duvc_ctl/: __init__.py
sphinx/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
sphinx/_static/: copybutton.js
sphinx/examples/: cli-examples.html  cpp-examples.html  python-examples.html
sphinx/user-guide/: installation.html  migration.html  quickstart.html
src/: CMakeLists.txt  bindings.cpp  core.cpp
src/c/: api.cpp  error_handling.cpp
src/core/: camera.cpp  capability.cpp  device.cpp  operations.cpp  result.cpp  types.cpp
src/detail/: com_helpers.cpp  directshow_impl.cpp
src/legacy/: bindings_legacy.cpp  core_legacy.cpp
src/platform/: factory.cpp
src/py/: pybind_module.cpp
src/utils/: error_decoder.cpp  logging.cpp  string_conversion.cpp
tests/: CMakeLists.txt  test_core.cpp  test_import.py
tests/bindings/python/: conftest.py  pytest.ini  test_01_core_enums.py  test_02_core_types.py  test_03_result_types.py  test_04_device_enumeration.py  test_05_device_discovery.py  test_06_result_api.py  test_07_pythonic_api_props.py  test_08_pythonic_api_methods.py  test_09_pythonic_api_queries.py  test_10_presets_defaults.py  test_11_bulk_operations.py  test_12_device_capabilities.py  test_13_string_conversion.py  test_14_logging.py  test_15_error_handling.py  test_16_device_callbacks.py  test_17_utility_functions.py  test_18_windows_features.py  test_19_platform_interface.py  test_20_integration.py  test_all.py
tests/cli/: auto.ps1
tests/cpp/functional/: camera_workflow_tests.cpp
tests/cpp/integration/: device_integration_tests.cpp
tests/cpp/unit/: core_tests.cpp  platform_tests.cpp  utils_tests.cpp  vendor_tests.cpp
tests/integration/python/: test_callbacks.py  test_devices.py  test_import.py  test_properties.py  test_vendor_properties.py
vcpkg/: portfile.cmake  usage  vcpkg.json
(+261 files in other folders)
